[package]
name = "ctfnote-extra"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
dotenvy = "0.15.7"
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["rt-multi-thread"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres"] }
