[package]
name = "ctfnote-extra"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
dotenvy = "0.15.7"
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["rt-multi-thread"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres"] }
jsonwebtoken = "9.3.0"
tracing-subscriber = { "version" = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
tower-http = { version = "0.5.2", features = ["trace"] }
askama = "0.12.1"
axum_csrf = { version = "0.9.0", features = ["layer"] }
rand = "0.8.5"
hex = "0.4.3"
